--- a/templates/attendance/fragments/add_own_wish.html
+++ b/templates/attendance/fragments/add_own_wish.html
@@ -1,4 +1,4 @@
-<div id="add-availability">
+<div id="add-wish">
     <script>
         var elems = document.querySelectorAll('select');
         var instances = M.FormSelect.init(elems);
@@ -10,21 +10,23 @@
             showClearBtn: true
         });
     </script>
-    <form hx-post="{% url 'add_own_availability' %}" hx-target="#my-availabilities" hx-swap="morph">
+    <form hx-post="{% url 'add_own_wish' %}" hx-target="#own-wishes-list" hx-swap="morph">
         <div class="modal-content card-color">
             {% csrf_token %}
-            <h5 class="main-color-text">Add availability</h5>
+            <h5 class="header-color-text"><b>Add wish</b></h5>
             <input type="hidden" name="employee" value="{{ user.id }}">
             <div class="row" style="gap: 1em">
-                <div class="s4 input-field">
+                <div class="input-field col s4">
                     <i class="material-icons prefix">event_calendar</i>
-                    {{ form.weekday }}
-                    <label>*Weekday</label>
+                    <input id="id_date" name="date" type="text" class="datepicker" placeholder=" ">
+                    <label for="id_date">*Date</label>
+                    <!-- set today as default date -->
+                    <script>$("#id_date").attr("value", new Date().toISOString().slice(0, 10))</script>
                 </div>
-                <div class="s2 input-field">
+                <div class="input-field col s2">
                     <label>
                         <input type="checkbox" checked="checked" name="is_available" />
-                        <span>Available</span>
+                        <span>*Available</span>
                     </label>
                 </div>
             </div><br>
@@ -46,15 +48,15 @@
                 </div>
             </div><br>
             <div class="row" style="gap: 1em">
-                <div class="s12 input-field">
+                <div class="input-field col s12">
                     <i class="material-icons prefix">chat_bubble</i>
                     <textarea name="note" autocapitalize="none" id="id_note" class="materialize-textarea grey-text text-darken-4" placeholder=" "></textarea>
                     <label for="id_note">Note</label>
                 </div>
-            </div>
+            </div><br><br><br>
         </div>
-        <div class="modal-footer card-color">
-            <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">add</i>Create availability</button>
+        <div class="modal-footer header-color">
+            <button type="submit" class="waves-effect waves-light btn accent-color" onclick="M.Modal.getInstance(document.querySelector('#add-modal')).close();"><i class="material-icons left">add</i>Create wish</button>
         </div>
     </form>
 </div>
