--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,8 +1,8 @@
-<div id="login-modal" class="modal" style="min-width: 25%; width: max-content">
+<div id="login-modal" class="modal card-color" style="min-width: 25%; width: max-content">
     <form method="POST" action="{% url 'login' %}">
         <div class="modal-content">
         {% csrf_token %}
-            <h5 class="main-color-text"><b>Login</b></h5>
+            <h5 class="header-color-text"><b>Login</b></h5>
             <div class="row" style="gap: 1em">
                 <div class="s12 input-field">
                     <i class="material-icons prefix">person</i>
@@ -14,11 +14,11 @@
                     <input type="password" name="password" maxlength="150" required id="id_password" placeholder=" ">
                     <label for="id_password">Password</label>
                 </div>
-            </div>
+            </div><br><br><br>
         </div>
-        <div class="modal-footer">
-            <a class="waves-effect waves-light btn-flat main-color-text" href="{% url 'password_reset' %}"><i class="material-icons left">question_mark</i>Forgot password</a>
-            <button type="submit" class="waves-effect waves-light btn main-color"><i class="material-icons left">login</i>Login</button>
+        <div class="modal-footer header-color">
+            <a class="waves-effect waves-light btn-flat white-text" href="{% url 'password_reset' %}"><i class="material-icons left">question_mark</i>Forgot password</a>
+            <button type="submit" class="waves-effect waves-light btn accent-color"><i class="material-icons left">login</i>Login</button>
         </div>
     </form>
 </div>
