--- a/templates/users/change_password.html
+++ b/templates/users/change_password.html
@@ -1,8 +1,25 @@
-<div id="change-password-modal" class="modal" style="min-width: 25%; width: max-content">
-    <form method="POST" action="{% url 'change_password' %}">
-        <div class="modal-content">
+<div id="change-password">
+    <div class="card-content header-color">
+        <div class="card-title"><b class="accent-color-text">Change password</b></div>
+    </div>
+    {% if errors %}
+        <div class="container" style="margin-top: 2%">
+            <div class="card card-color">
+                <div class="card-content warning-color">
+                    <div class="card-title"><b class="white-text">Errors</b></div>
+                    <div class="white-text">Your new password was not accepted. Please address the following issues</div>
+                </div>
+                <div class="card-content card-color">
+                    {% for error in errors %}
+                        <span>{{ error }}</span><br>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    {% endif %}
+    <form hx-post="{% url 'change_password' %}" hx-target="#change-password" hx-swap="morph">
+        <div class="card-content card-color">
             {% csrf_token %}
-            <h5 class="main-color-text">Enter new password</h5>
             <div class="row" style="gap: 1em">
                 <div class="s6 input-field">
                     <i class="material-icons prefix">vpn_key</i>
@@ -16,8 +33,9 @@
                 </div>
             </div>
         </div>
-        <div class="modal-footer">
-            <button type="submit" class="waves-effect waves-light btn main-color"><i class="material-icons left">update</i>Update password</button>
+        <div class="card-content right">
+            <button type="submit" class="waves-effect waves-light btn accent-color"><i class="material-icons left">update</i>Update password</button>
         </div>
     </form>
+    </div>
 </div>
