--- a/templates/attendance/fragments/add_own_availability.html
+++ b/templates/attendance/fragments/add_own_availability.html
@@ -11,8 +11,8 @@
         });
     </script>
     <form hx-post="{% url 'add_own_availability' %}" hx-target="#own-availabilities-list" hx-swap="morph">
+        {% csrf_token %}
         <div class="modal-content card-color">
-            {% csrf_token %}
             <h5 class="header-color-text"><b>Add availability</b></h5>
             <input type="hidden" name="employee" value="{{ user.id }}">
             <div class="row" style="gap: 1em">
@@ -51,9 +51,9 @@
                     <textarea name="note" autocapitalize="none" id="id_note" class="materialize-textarea grey-text text-darken-4" placeholder=" "></textarea>
                     <label for="id_note">Note</label>
                 </div>
-            </div><br><br><br>
+            </div>
         </div>
-        <div class="modal-footer header-color">
+        <div class="modal-footer header-color" style="margin-top: 10%">
             <button type="submit" class="waves-effect waves-light btn accent-color" onclick="M.Modal.getInstance(document.querySelector('#add-modal')).close();"><i class="material-icons left">add</i>Create availability</button>
         </div>
     </form>
