--- a/templates/attendance/fragments/add_own_wish.html
+++ b/templates/attendance/fragments/add_own_wish.html
@@ -53,9 +53,9 @@
                     <textarea name="note" autocapitalize="none" id="id_note" class="materialize-textarea grey-text text-darken-4" placeholder=" "></textarea>
                     <label for="id_note">Note</label>
                 </div>
-            </div><br><br><br>
+            </div>
         </div>
-        <div class="modal-footer header-color">
+        <div class="modal-footer header-color" style="margin-top: 10%">
             <button type="submit" class="waves-effect waves-light btn accent-color" onclick="M.Modal.getInstance(document.querySelector('#add-modal')).close();"><i class="material-icons left">add</i>Create wish</button>
         </div>
     </form>
