--- a/templates/attendance/fragments/own_availabilities.html
+++ b/templates/attendance/fragments/own_availabilities.html
@@ -3,7 +3,7 @@
         <thead class="header-color white-text">
         <tr>
             <th>Weekday</th>
-            <th>Available</th>
+            <th class="center">Available</th>
             <th>Start</th>
             <th>End</th>
             <th>Tendency</th>
@@ -14,8 +14,10 @@
         <tbody>
         {% for entry in all_entries %}
             <tr>
-                <td>{{ entry.get_weekday_display }}</td>
-                <td>
+                <td {% if entry.weekday == 6 %}class="marker-saturday"{% elif entry.weekday == 7 %}class="marker-sunday"{% endif %}>
+                    <b>{{ entry.get_weekday_display }}</b>
+                </td>
+                <td class="center">
                     {% if entry.is_available %}
                         <i class="material-icons light-green-text text-darken-1">done</i>
                     {% else %}
@@ -27,7 +29,7 @@
                 <td><span class="new badge grey darken-1 white-text z-depth-1" data-badge-caption=""><b>{{ entry.get_tendency_display }}</b></span></td>
                 <td>{{ entry.note }}</td>
                 <td>
-                    <a class="modal-trigger waves-effect waves-light btn amber darken-1" data-target="edit-modal" hx-get="{% url 'edit_own_availability' entry.id %}" hx-target="#edit-modal-content" hx-swap="morph"><i class="material-icons">edit</i></a>
+                    <a class="modal-trigger waves-effect waves-light btn accent-color" data-target="edit-modal" hx-get="{% url 'edit_own_availability' entry.id %}" hx-target="#edit-modal-content" hx-swap="morph"><i class="material-icons">edit</i></a>
                 </td>
             </tr>
         {% endfor %}
