--- a/templates/shifts/own_shifts.html
+++ b/templates/shifts/own_shifts.html
@@ -35,7 +35,7 @@
                             <tbody>
                             {% for entry in upcoming_shifts %}
                                 <tr {% if entry.highlight %}class="amber lighten-3"{% endif %}>
-                                    <td>
+                                    <td {% if entry.get_date.weekday == 5 %}class="marker-saturday"{% elif entry.get_date.weekday == 6 %}class="marker-sunday"{% endif %}>
                                         {{ entry.get_date|date:"l" }}<br>
                                         <b>{{ entry.get_date|date:"d.m.Y" }}</b><br>
                                     </td>
@@ -88,7 +88,7 @@
                             <tbody>
                             {% for entry in recent_shifts %}
                                 <tr {% if entry.highlight %}class="amber lighten-3"{% endif %}>
-                                    <td>
+                                    <td {% if entry.get_date.weekday == 5 %}class="marker-saturday"{% elif entry.get_date.weekday == 6 %}class="marker-sunday"{% endif %}>
                                         {{ entry.get_date|date:"l" }}<br>
                                         <b>{{ entry.get_date|date:"d.m.Y" }}</b><br>
                                     </td>
