--- a/templates/users/user_list.html
+++ b/templates/users/user_list.html
@@ -3,123 +3,28 @@
 
 {% block content %}
     {% if user.is_admin %}
-        <h3 class="light-blue-text text-darken-1">Useraccounts</h3>
-        <ul class="collapsible">
-            <li {% if search %}class="active"{% endif %}>
-                <div class="collapsible-header grey lighten-3"><i class="material-icons left">search</i>Search</div>
-                <div class="collapsible-body grey lighten-5">
-                    <form method="POST" action="{% url 'useraccounts' %}">
-                        {% csrf_token %}
-                        <div class="row">
-                            <div class="s12 m6 input-field">
+        <br><br><br>
+        <div id="user-content">
+            <form hx-post="{% url 'useraccounts' %}" hx-target="#users-table" hx-swap="morph">
+                {% csrf_token %}
+                <div class="card card-color">
+                    <div class="card-content header-color">
+                        <div class="row" style="gap: 1em">
+                            <div class="s8 card-title"><b class="accent-color-text"><i class="material-icons left">group</i>Useraccounts</b></div>
+                            <div class="s4 m4 input-field">
                                 <i class="material-icons prefix">search</i>
-                                <input id="id_keyword" type="search" name="keyword" {% if data.keyword %}value="{{ data.keyword }}"{% endif %} placeholder=" ">
+                                <input id="id_keyword" type="search" name="keyword" placeholder=" " hx-post="{% url 'useraccounts' %}" hx-trigger="keyup delay:250ms" hx-target="#user-table" hx-swap="morph">
                                 <label for="id_keyword">Keyword</label>
                             </div>
-                        </div><br>
-                        <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">search</i>Search</button>
-                        {% if search %}
-                            <a class="waves-effect waves-light btn-flat red-text text-darken-1" href="{% url 'employees' %}"><i class="material-icons left">clear</i>Clear</a>
-                        {% endif %}
-                    </form>
-                </div>
-            </li>
-        </ul>
-
-        <a class="waves-effect waves-light btn light-blue darken-1 right" href="{% url 'create_user' %}"><i class="material-icons left">person_add</i>Create user</a><br><br><br>
-        <div class="card">
-            <div class="card-content">
-                <table class="striped highlight responsive-table">
-                    <thead class="grey darken-1 white-text">
-                        <tr>
-                            <th>Last Name<br>First Name</th>
-                            <th>E-Mail<br>Username</th>
-                            <th>Staff ID<br>External</th>
-                            <th>Address<br>Zip City</th>
-                            <th>Telephone home<br>Telephone mobile</th>
-                            <th>Start contract<br>End contract</th>
-                            <th>Verified<br>Role</th>
-                            <th>Active<br>Last login (UTC)</th>
-                            <th>Edit</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for entry in page_obj %}
-                        <tr>
-                            <td>{{ entry.first_name }}<br><b>{{ entry.last_name }}</b></td>
-                            <td>
-                                {{ entry.email }}<br>
-                                <span class="new badge grey darken-1 white-text z-depth-1" data-badge-caption="">
-                                    <b>{{ entry.username }}</b>
-                                </span>
-                            </td>
-                            <td>
-                                {{ entry.staff_id }}<br>
-                                {% if entry.is_external %}
-                                    <span class="new badge grey darken-1 white-text z-depth-1" data-badge-caption="">
-                                        <b>External</b>
-                                    </span>
-                                {% endif %}
-                            </td>
-                            <td>{{ entry.address }}<br>{{ entry.zip_city }}</td>
-                            <td>{{ entry.telephone_home }}<br>{{ entry.telephone_mobile }}</td>
-                            <td>{{ entry.start_contract|date:"d.m.Y" }}<br>{{ entry.end_contract|date:"d.m.Y" }}</td>
-                            <td>
-                                {% if entry.is_verified %}
-                                    <i class="material-icons light-green-text text-darken-1">done</i>
-                                {% else %}
-                                    <i class="material-icons red-text text-darken-1">close</i>
-                                {% endif %}<br>
-                                {% if entry.role == 'A' %}
-                                <span class="new badge light-blue darken-1 white-text z-depth-1" data-badge-caption="">
-                                    <b>Admin</b>
-                                </span>
-                                {% elif entry.role == 'P' %}
-                                    <span class="new badge amber darken-1 black-text z-depth-1" data-badge-caption="">
-                                        <b>Planner</b>
-                                    </span>
-                                {% else %}
-                                    <span class="new badge grey darken-1 white-text z-depth-1" data-badge-caption="">
-                                        <b>Employee</b>
-                                    </span>
-                                {% endif %}
-                            </td>
-                            <td>
-                                {% if entry.is_active %}
-                                    <i class="material-icons light-green-text text-darken-1">done</i>
-                                {% else %}
-                                    <i class="material-icons red-text text-darken-1">close</i>
-                                {% endif %}
-                                <br>{{ entry.last_login|date:"d.m.Y H:i" }}
-                            </td>
-                            <td><a class="waves-effect waves-light btn amber darken-1" href="{% url 'edit_user' entry.id %}"><i class="material-icons">edit</i></a></td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        </div><br>
-
-        <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }} ({{ entries }} entries)</span>
-        <ul class="pagination center">
-            {% if page_obj.has_previous %}
-                <li class="waves-effect"><a href="?page={{ page_obj.previous_page_number }}"><i class="material-icons">chevron_left</i></a></li>
-            {% else %}
-                <li class="disabled grey-text text-lighten-1"><a><i class="material-icons">chevron_left</i></a></li>
-            {% endif %}
-            {% for page in page_obj.paginator.page_range %}
-                {% if page == page_obj.number %}
-                    <li class="active light-blue darken-1"><a>{{ page_obj.number }}</a></li>
-                {% else %}
-                    <li class="waves-effect"><a href="?page={{ page }}">{{ page }}</a></li>
-                {% endif %}
-            {% endfor %}
-            {% if page_obj.has_next %}
-                <li class="waves-effect"><a href="?page={{ page_obj.next_page_number }}"><i class="material-icons">chevron_right</i></a></li>
-            {% else %}
-                <li class="disabled grey-text text-lighten-1"><a><i class="material-icons">chevron_right</i></a></li>
-            {% endif %}
-        </ul>
+                        </div>
+                        <div id="loader" hx-post="{% url 'useraccounts' %}" hx-trigger="load once" hx-target="#user-table" hx-swap="morph"></div>
+                        <br>
+                        <a class="modal-trigger btn-floating accent-color white-text right" href="{% url 'create_user' %}"><i class="material-icons left">person_add</i></a>
+                    </div>
+                    <div id="user-table"></div>
+                </div><br>
+            </form>
+        </div>
     {% else %}
         {% include 'forbidden.html' %}
     {% endif %}
